<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/name_text"
        style="@style/TextCustomProfileCardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/name_placeholder"
        app:layout_constraintStart_toStartOf="@+id/surname_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surname_text"
        style="@style/TextCustomProfileCardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/surname_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/lastname_text"
        app:layout_constraintStart_toStartOf="@+id/lastname_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/lastname_text"
        style="@style/TextCustomProfileCardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main_profile"
        android:layout_marginBottom="12dp"
        android:text="@string/lastname_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/birthday_text"
        style="@style/TextCustomProfileCardDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/margin_main_profile"
        android:text="@string/birthday_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birthday_value"
        style="@style/TextCustomProfileCardDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/birthday_placeholder"
        app:layout_constraintStart_toStartOf="@+id/birthday_text"
        app:layout_constraintTop_toBottomOf="@+id/birthday_text" />
</androidx.constraintlayout.widget.ConstraintLayout>