<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_tb"
            app:title="@string/appbar_main_text" />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_btn"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/profile_overview"
        layout="@layout/profile_overview_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TextView
        android:id="@+id/textview_city_text"
        style="@style/TextCustomSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/city_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_overview" />

    <TextView
        android:id="@+id/textview_city_value"
        style="@style/TextCustomMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/city_placeholder"
        app:layout_constraintStart_toStartOf="@+id/textview_city_text"
        app:layout_constraintTop_toBottomOf="@+id/textview_city_text" />

    <TextView
        android:id="@+id/textview_aboutme_text"
        style="@style/TextCustomSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main_profile"
        android:text="@string/aboutme_text"
        app:layout_constraintStart_toStartOf="@+id/textview_city_value"
        app:layout_constraintTop_toBottomOf="@+id/textview_city_value" />

    <TextView
        android:id="@+id/textview_aboutme_value"
        style="@style/TextCustomMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/aboutme_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textview_aboutme_text"
        app:layout_constraintTop_toBottomOf="@+id/textview_aboutme_text" />


</androidx.constraintlayout.widget.ConstraintLayout>